# viking

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  ChangeLog.0  FLATPAK.md  HACKING  INSTALL  Makefile  Makefile.am  NEWGOOGLE  NEWS  README  README.md  TODO  TODO-REID  Using the Viking jpeg module.doc  VIKING-REMOTE.gconf  acinclude.m4  autogen.sh  buildtests.sh  configure.ac  mingw-viking.spec.in  mingw32-viking.spec.in  mingw64-viking.spec.in  org.viking.Viking.appdata.xml  org.viking.Viking.yml  viking-remote  viking.doap  viking.spec.in
.config/viking/: .keep
.devcontainer/: devcontainer.json
.github/workflows/: build-variants.yml  build.yml  makefile.yml
.github/workflows  /: build.yml
data/: Makefile.am  datasources.xml  external_tools.xml  goto_tools.xml  latlontz.txt  maps.xml  routing.xml  unreachable_tiles.txt
debian/: Makefile.am  README  README.Debian  changelog  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  viking-default.ex  viking-remote.1  viking-remote.xml  viking.1  viking.desktop  viking.doc-base.EX  viking.menu  viking.xml  watch  watch.ex
doc/: GEOCODED-PHOTOS  GETTING-STARTED  GPSMAPPER  Makefile.am  VikMapType.dia  viking-remote.xml  viking.xml
doc/dev/: CLEANUPS  Clipboard  FF2  FF2-Implementation  File-Format-Outline  GRRM  Makefile.am  MergeLayers  README  Track-Tool-Interfaces  TrackEditing
doc/examples/: Makefile.am  datasources.xml  external_tools.xml  goto_tools.xml  maps.xml  routing.xml
doc/reference/: Makefile.am  README
help/: .gitignore  Makefile.am  viking.omf.in  viking.xml  viking.xml.in
help/C/: README.txt  attribution.xml  commandline.xml  commandline_details.xml  config.xsl  dem_layer.xml  edit_view_menus.xml  extending.xml  geoclue_layer.xml  georef_layer.xml  index.docbook  legal.xml  mapnik_rendering_layer.xml  recommends.xml  refsynopsis.xml  style.xsl  userconfig.xml  viking.css  viking.xml
m4/: expat.m4  libcurl.m4
maintainer/: extract-NEWS.sh  extract-authors.sh  git-diff2po_ChangeLog.sh  git2changelog.sh  import-launchpad.sh
po/: ChangeLog  LINGUAS  POTFILES.in  README.md  ast.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  he.po  hu.po  id.po  it.po  ja.po  jv.po  ko.po  ku.po  lt.po  lv.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  viking-cs.po  viking-da.po  viking-de.po  viking-es.po  viking-fr.po  (+5 more)
src/: .compile_config  .depend  .gitignore  .link_config  Makefile  Makefile.am  Makefile_GTK_2_2  Makefile_windows  acquire.c  acquire.h  astronomy.c  astronomy.h  babel.c  babel.h  babel_ui.c  babel_ui.h  background.c  background.h  bbox.h  bing.c  bing.h  bingmapsource.c  bingmapsource.h  bluemarble.c  bluemarble.h  clipboard.c  clipboard.h  compression.c  compression.h  config.h  coords.c  coords.h  curl_download.c  curl_download.h  datasource_bfilter.c  datasource_file.c  datasource_gc.c  datasource_geojson.c  datasource_geotag.c  datasource_google.c  (+288 more)
src/icons/: Makefile.am  addtr_18.png.h  addwp_18.png.h  compile.sh  edtr_18.png.h  edwp_18.png.h  geomove_18.png.h  geozoom_18.png.h  icons.gresource.xml  mapdl_18.png.h  ruler_18.png.h  showpic_18.png.h  wp_camp.png.h  wp_car.png.h  wp_deer.png.h  wp_flag.png.h  wp_geocache.png.h  wp_geocache_fnd.png.h  wp_house.png.h  wp_wpt_dot.png.h  zoom_18.png.h
src/libjpeg/: README  README.orig  jpeg-data.c  jpeg-data.h  jpeg-marker.c  jpeg-marker.h
src/misc/: fpconv.c  fpconv.h  gtkhtml-private.h  gtkhtml.c  strtod.c  strtod.h
test/: 1952523.vik  1970257.vik  GH#137.gpx  GPXv1.1-sample.gpx  Makefile.am  Mapnik-helloworld.vik  Mapnik-ne_110m_admin_0_countries.xml  OSRM_sample_response.txt  OpenStreetMap.vik  README  RobRoute.gpx  SF#022.gpx  Simple.vik  Simple_no-geoclue.vik  Simple_no-realtime-gps-tracking.vik  Stonehenge.fit  Stonehenge.gpx  Stonehenge.kml  Stonehenge.tcx  StonehengeMap.kmz  Terraserver.vik  WaypointSymbols.gpx  WaypointSymbols.vik  check_babel.sh  check_decimal_output.sh  check_degrees_conversions.sh  check_fit.sh  check_geojson_osrm.sh  check_geotag.sh  check_gpx.sh  check_gzip.sh  check_help_xml.sh  check_kml.sh  check_md5_hash.sh  check_metatile.sh  check_parse_latlon.sh  check_remote.sh  check_tcx.sh  check_vik2vik.sh  check_vikgoto.sh  (+25 more)
tools/: Makefile.am  README  gcget  gcget-perl  gctrackbyarc.py  geo-html2gpx  geo-nearest  googledirections  images2waypoints.pl  timezone-lookup-create.sh  track2route_upload.sh  viking-cache-mbtile.py  viking-cache.py
tools/dem24k/: README  dem24k.pl  repackage.sh
win32/: .gitignore  Makefile.am  README  README.txt  configure_and_make-wine.sh  configure_and_make.bat  generate_install.sh  installer-mingw.sh  installer-wine.sh  installer.bat  link.bat  make-wine.sh  make.bat  makeall.bat  msys-pi-wine.sh  msys-pi.bat  msys-pi.sh  prepare.bat  setpath.bat
win32/installer/: Makefile.am  langmacros.nsh  viking-installer.nsi
win32/installer/pixmaps/: Makefile.am  viking_icon.rc
win32/installer/translations/: english.nsh  french.nsh  spanish.nsh
windows/: Makefile.am  README.txt  configure_and_make.bat  generate_install.sh  installer-mingw.sh  installer.bat  make-wine.sh  make.bat  msys-pi-wine.sh  msys-pi.sh
windows/installer/: Makefile.am  langmacros.nsh  pango-build-move-usp10-before-gdi32.patch  viking-installer.nsi
windows/installer/translations/: Makefile.am  english.nsh  french.nsh  spanish.nsh
